# quiver-groups

./: .gitignore  .travis.yml  README.md  quiver-groups.cabal  stack.yaml
src/Control/Quiver/: Group.hs
test/: PropTests.hs
