name:                quiver-groups
version:             0.1.0.0
synopsis:            Group and chunk values within a Quiver
description:         Customisable Quiver grouping and chunking functions.
license:             MIT
license-file:        LICENSE
author:              Ivan Lazar Miljenovic
maintainer:          Ivan.Miljenovic@gmail.com
-- copyright:
category:            Control
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

tested-with:   GHC == 7.10.2, GHC == 7.11.*

source-repository head
    type:         git
    location:     https://github.com/ivan-m/quiver-groups.git

library
  exposed-modules:     Control.Quiver.Group
  -- other-modules:
  build-depends:       base >=4.8 && <4.9
                     , quiver >= 1.1.3 && < 1.2
  hs-source-dirs:      src
  default-language:    Haskell2010
